@@ -1,7 +1,5 @@
 <?php
 
-require_once(DIR .'api'. DS .'libraries'. DS .'php5'. DS .'MY_Model'. EXT);
-
 Class Api extends Controller {
     
     function __construct()
@@ -15,10 +13,10 @@ Class Api extends Controller {
     
     function v3()
     {
-        loader::model('../db_common/common_user');
+        loader::model('doly', null, null, true);
         
-        // $this>common_user->save();
-        
+        $this->doly->test();
+    
         print_r(i_server('REQUEST_METHOD'));        
     }
     
