@@ -17,16 +17,19 @@ Class Welcome extends Welcome_Controller {
         // print nl2br(ob_get_contents()); exit;
         view_var('title', 'Welcome to Obullo Framework !');
         $data['var'] = 'and generated by ';
-
+        
         // $query = '"'.'SELECT * FROM auto.claim WHERE dl_number=\'CA1101-11206\' LIMIT 1'.'"';
 
         $query = "SELECT dl_number,number,status,type,company_id,vehicle.year,vehicle.make,vehicle.model,vehicle.specialty,owner.last_name,owner.in_rental,estimate.type,flag_handle_supplement,vehicle.location.at_tow_yard,company.name,flag_needs_attention,flag_billing_needed,appraiser.last_name,flag_non_responsive_ia FROM auto.claim WHERE (status='NEW' OR status='IN PROGRESS' OR status='ASSIGNED' or flag_needs_attention=1) AND flag_adjustment_file=0 ORDER BY date_time_created ASC LIMIT 1,25";
         
         $query = urlencode($query);
         
-        $hmvc = hmvc_request('GET', 'api/v3?query='.$query.'&a=b<b>ersin</b>', array('query' => $query));
+        $hmvc = hmvc_request('get', 'api/v3?query='.$query.'&a=b<b>ersin</b>', array('query' => $query));
         echo $hmvc->exec()->response();
 
+
+        
+        
         // view_var('body', view_render(array('layouts/view_header', 'view_left',   
         // 'view_welcome', 'view_right', 'layouts/view_footer'), $data));
         
